Prevent tooltip from wrapping or overflowing container

--- a/src/components/LineChart/components/Tooltip/Tooltip.scss
+++ b/src/components/LineChart/components/Tooltip/Tooltip.scss
@@ -18,6 +18,7 @@
   font-size: 13px;
   font-weight: 600;
   margin: 0;
+  white-space: nowrap;
 }
 
 .Value {
